<resources>
    <string name="app_name">SQLite Insert</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_user">Add User</string>
    <string name="view_data">View Data</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="running">Running</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="successful">Successful</string>
    <string name="empty_view_title_text">It\'s a bit lonely here&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding a user</string>
    <string name="usernameAndPasswordEmpty">You must give up a username and password to create an user!</string>
    <string name="insertionError">An error occurred while inserting the new user in the database!</string>
    <string name="updateError">The can\'t be updated!</string>
    <string name="giveNewAndOldUsername">You must give the old and new username to update the username.</string>
    <string name="editor_update_successful">Update successful</string>
    <string name="editor_update_failed">Update failed</string>
    <string name="editor_delete_successful">Delete successful</string>
    <string name="editor_delete_failed">Delete failed</string>
</resources>
